# safemoononsolwithtransferhooks

./: Anchor.toml
programs/txhookmagick/: Cargo.toml
programs/txhookmagick/src/: lib.rs
tests/: txhookmagick.ts
