[package]
name = "txhookmagick"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "txhookmagick"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.29.0", feautures = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-tlv-account-resolution = "0.5.2"
spl-transfer-hook-interface = "0.5.1"
raydium-cp-swap = { path = "../../raydium-cp-swap/programs/cp-swap", features = ["no-entrypoint"] }
spl-token-2022 = "2.0.2"
